@startuml
annotation java.lang.Override
class java.util.ArrayList
class java.util.HashMap
class java.util.Map.Entry
class java.util.Scanner
class vendingmachine.CardPayment
class vendingmachine.CashPayment
class vendingmachine.Driver
class vendingmachine.MoneyController
class vendingmachine.Product
class vendingmachine.ProductController
class vendingmachine.VendingMachine
interface vendingmachine.Payment
vendingmachine.CardPayment ..> java.lang.Override
vendingmachine.CardPayment --|> vendingmachine.Payment
vendingmachine.CashPayment ..> java.lang.Override
vendingmachine.CashPayment ..> java.util.ArrayList
vendingmachine.CashPayment ..> java.util.HashMap
vendingmachine.CashPayment ..> java.util.Map.Entry
vendingmachine.CashPayment --|> vendingmachine.Payment
vendingmachine.Driver ..> java.util.Scanner
vendingmachine.ProductController ..> java.util.ArrayList
vendingmachine.VendingMachine ..> java.util.ArrayList
vendingmachine.VendingMachine ..> java.util.Scanner
@enduml